# Andriod-AutoUEDump-GUI

./: CMakeLists.txt
.github/workflows/: android-cmake-build.yml
KittyMemoryEx/: KittyArm64.cpp  KittyArm64.hpp  KittyIOFile.cpp  KittyIOFile.hpp  KittyMemOp.cpp  KittyMemOp.hpp  KittyMemoryEx.cpp  KittyMemoryEx.hpp  KittyMemoryMgr.cpp  KittyMemoryMgr.hpp  KittyPtrValidator.cpp  KittyPtrValidator.hpp  KittyScanner.cpp  KittyScanner.hpp  KittyTrace.cpp  KittyTrace.hpp  KittyUtils.cpp  KittyUtils.hpp  MemoryBackup.cpp  MemoryBackup.hpp  MemoryPatch.cpp  MemoryPatch.hpp  zip.cpp
KittyMemoryEx/zip/: miniz.h  zip.h
src/AutoFix/: Arm64Decode.cpp  Arm64Decode.hpp  AutoFixOffsets.cpp  AutoFixOffsets.hpp  VirtualFunctionResolver.cpp  VirtualFunctionResolver.hpp
src/UE/: UEWrappers.cpp  UEWrappers.hpp
